fix: disruptor z-index, main nav background, use f:image viewhelper for hero image + do not use lazy load

--- a/packages/xm_dkfz_net_prototype/source/_patterns/components/disruptor/disruptor.scss
+++ b/packages/xm_dkfz_net_prototype/source/_patterns/components/disruptor/disruptor.scss
@@ -18,7 +18,7 @@
         //background: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, .1) 100%);
         background: $color-gray-200;
         padding: .5rem;
-        z-index: 100;
+        z-index: 99;
         animation: opacityIn 0.4s ease;
     }
 
